tests/expectations/parser-statement/statement/async_fail.out
Error [EPAR0370005]: expected '{' -- found 'finalize'
    --> test_0:1:7
     |
   1 | final finalize(foo);
     |       ^^^^^^^^
